--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 futures = { version = "0.3.5", default-features = false }
 tokio = { version = "0.2", features = ["full"] }
 chrono = "0.4.13"
+rppal = "0.11.3"
+libc = "0.2.74"
